# task-scheduling

./: .gitignore  README.md  alembic.ini  config.py  main.py  pyproject.toml
config/: __init__.py  app.py  database.py  settings.py  views.py
mailer/: README.md  config.production.js  package-lock.json
mailer/emails/: report.html  transactional.html
migrations/versions/: 30c20ceacd38_add_deleted_and_updated_columns.py  55b3fa00f8c2_add_more_time_and_mailable_columns_to_.py
services/: db.py  report.py
static/: main.css  main.js  manifest.json
templates/: index.html
templates/mail/emails/: report.html
views/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
views/src/: main.js
views/src/layouts/: Layout.svelte
views/src/lib/: helpers.ts
views/src/pages/: Index.svelte  Settings.svelte  TaskList.svelte  TaskPage.svelte
